[gd_scene load_steps=8 format=2]

[ext_resource path="res://content/weapons/obelisk/img/BarDark.png" type="Texture" id=1]
[ext_resource path="res://content/weapons/obelisk/img/Slidercsp.png" type="Texture" id=2]
[ext_resource path="res://content/weapons/obelisk/img/QuickReloadBound2.png" type="Texture" id=3]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=4]
[ext_resource path="res://content/weapons/obelisk/QuickReload.gd" type="Script" id=5]
[ext_resource path="res://content/sounds/Weapons/obelisk/quickreloadwindow.wav" type="AudioStream" id=6]
[ext_resource path="res://content/weapons/obelisk/img/QuickReloadWindowSquash.png" type="Texture" id=7]

[node name="QuickReload" type="Node2D"]
script = ExtResource( 5 )

[node name="QuickReloadBar" type="Sprite" parent="."]
position = Vector2( 1, 0 )
texture = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
width = 8.0
texture = ExtResource( 7 )
texture_mode = 2

[node name="SliderSprite" type="Sprite" parent="."]
position = Vector2( 2, 0 )
texture = ExtResource( 2 )

[node name="MinBound" type="Sprite" parent="."]
position = Vector2( -11, -8 )
texture = ExtResource( 3 )
centered = false

[node name="MaxBound" type="Sprite" parent="."]
position = Vector2( 6, 8 )
rotation = 3.14159
texture = ExtResource( 3 )
centered = false

[node name="Sound" parent="." instance=ExtResource( 4 )]
volume_db = 1.413
bus = "Sounds"
randomVolume = 2.1
randomPitch = 0.14
streams = [ ExtResource( 6 ) ]
